; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/mantis/extr_mantis_hif.c_mantis_hif_read_iom.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/mantis/extr_mantis_hif.c_mantis_hif_read_iom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mantis_ca = type { i32, %struct.mantis_pci* }
%struct.mantis_pci = type { i32 }

@MANTIS_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Adapter(%d) Slot(0): Request HIF I/O Read\00", align 1
@MANTIS_GPIF_PCMCIAREG = common dso_local global i32 0, align 4
@MANTIS_GPIF_PCMCIAIOM = common dso_local global i32 0, align 4
@MANTIS_HIF_STATUS = common dso_local global i32 0, align 4
@MANTIS_GPIF_BRADDR = common dso_local global i32 0, align 4
@MANTIS_GPIF_BRBYTES = common dso_local global i32 0, align 4
@MANTIS_GPIF_HIFRDWRN = common dso_local global i32 0, align 4
@MANTIS_GPIF_ADDR = common dso_local global i32 0, align 4
@MANTIS_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [55 x i8] c"Adapter(%d) Slot(0): HIF Smart Buffer operation failed\00", align 1
@EREMOTEIO = common dso_local global i32 0, align 4
@MANTIS_GPIF_DIN = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [17 x i8] c"I/O Read: 0x%02x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mantis_hif_read_iom(%struct.mantis_ca* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mantis_ca*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mantis_pci*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mantis_ca* %0, %struct.mantis_ca** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.mantis_ca*, %struct.mantis_ca** %4, align 8
  %10 = getelementptr inbounds %struct.mantis_ca, %struct.mantis_ca* %9, i32 0, i32 1
  %11 = load %struct.mantis_pci*, %struct.mantis_pci** %10, align 8
  store %struct.mantis_pci* %11, %struct.mantis_pci** %6, align 8
  store i32 0, i32* %8, align 4
  %12 = load i32, i32* @MANTIS_DEBUG, align 4
  %13 = load %struct.mantis_pci*, %struct.mantis_pci** %6, align 8
  %14 = getelementptr inbounds %struct.mantis_pci, %struct.mantis_pci* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @dprintk(i32 %12, i32 1, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load %struct.mantis_ca*, %struct.mantis_ca** %4, align 8
  %18 = getelementptr inbounds %struct.mantis_ca, %struct.mantis_ca* %17, i32 0, i32 0
  %19 = call i32 @mutex_lock(i32* %18)
  %20 = load i32, i32* @MANTIS_GPIF_PCMCIAREG, align 4
  %21 = xor i32 %20, -1
  %22 = load i32, i32* %8, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* @MANTIS_GPIF_PCMCIAIOM, align 4
  %25 = load i32, i32* %8, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* @MANTIS_HIF_STATUS, align 4
  %28 = load i32, i32* %8, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* %8, align 4
  %32 = or i32 %31, %30
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = load i32, i32* @MANTIS_GPIF_BRADDR, align 4
  %35 = call i32 @mmwrite(i32 %33, i32 %34)
  %36 = load i32, i32* @MANTIS_GPIF_BRBYTES, align 4
  %37 = call i32 @mmwrite(i32 1, i32 %36)
  %38 = call i32 @udelay(i32 20)
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* @MANTIS_GPIF_HIFRDWRN, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @MANTIS_GPIF_ADDR, align 4
  %43 = call i32 @mmwrite(i32 %41, i32 %42)
  %44 = load %struct.mantis_ca*, %struct.mantis_ca** %4, align 8
  %45 = call i64 @mantis_hif_sbuf_opdone_wait(%struct.mantis_ca* %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %58

47:                                               ; preds = %2
  %48 = load i32, i32* @MANTIS_ERROR, align 4
  %49 = load %struct.mantis_pci*, %struct.mantis_pci** %6, align 8
  %50 = getelementptr inbounds %struct.mantis_pci, %struct.mantis_pci* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @dprintk(i32 %48, i32 1, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0), i32 %51)
  %53 = load %struct.mantis_ca*, %struct.mantis_ca** %4, align 8
  %54 = getelementptr inbounds %struct.mantis_ca, %struct.mantis_ca* %53, i32 0, i32 0
  %55 = call i32 @mutex_unlock(i32* %54)
  %56 = load i32, i32* @EREMOTEIO, align 4
  %57 = sub nsw i32 0, %56
  store i32 %57, i32* %3, align 4
  br label %69

58:                                               ; preds = %2
  %59 = load i32, i32* @MANTIS_GPIF_DIN, align 4
  %60 = call i32 @mmread(i32 %59)
  store i32 %60, i32* %7, align 4
  %61 = load i32, i32* @MANTIS_DEBUG, align 4
  %62 = load i32, i32* %7, align 4
  %63 = call i32 @dprintk(i32 %61, i32 1, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0), i32 %62)
  %64 = call i32 @udelay(i32 50)
  %65 = load %struct.mantis_ca*, %struct.mantis_ca** %4, align 8
  %66 = getelementptr inbounds %struct.mantis_ca, %struct.mantis_ca* %65, i32 0, i32 0
  %67 = call i32 @mutex_unlock(i32* %66)
  %68 = load i32, i32* %7, align 4
  store i32 %68, i32* %3, align 4
  br label %69

69:                                               ; preds = %58, %47
  %70 = load i32, i32* %3, align 4
  ret i32 %70
}

declare dso_local i32 @dprintk(i32, i32, i8*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mmwrite(i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i64 @mantis_hif_sbuf_opdone_wait(%struct.mantis_ca*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @mmread(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
